bin/console/src/bottom_pane/snapshots/chaos_console__bottom_pane__chat_composer__tests__footer_collapse_queue_mode_only.snap
---
source: bin/console/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                    "
"› Test              "
"                    "
"                    "
"                    "
"                    "
"                    "
"                    "
"  tab to queue      "
