bin/console/src/bottom_pane/snapshots/chaos_console__bottom_pane__chat_composer__tests__footer_collapse_queue_short_with_context.snap
---
source: bin/console/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                  "
"› Test                                            "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
"  tab to queue message          98% context left  "
